# RAG-llama-index-openai

./: LICENSE  README.md  pyproject.toml
data/: nova-c.md
notebooks/: RAGLlamaIndex.ipynb
