[tool.poetry]
name = "rag-llama-index-openai"
version = "0.1.0"
description = ""
authors = ["brenoAV"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
llama-index = "^0.10.12"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
